# Autonomous-Intelligence

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_SETUP.md  CONTRIBUTING.md  DOCKER_TROUBLESHOOTING.md  Makefile  PERFORMANCE_IMPROVEMENTS.md  README.md  docker-compose.yml  docker-helpers.sh  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
backend/: .coverage  .env.example  .gitignore  Dockerfile  alembic.ini  app.py  app_helpers.py  client.py  docker-compose.yml  features.py  kubernetes-local.yml  manage-api-keys.sh  pyproject.toml  requirements-ci.txt  requirements.txt  start.sh
backend/agents/: __init__.py  autonomous_agent.py  browser_policy.py  config.py  multi_agent_system.py  reactive_agent.py  registry.py  routing.py  sandbox.py
backend/alembic/: README.md  env.py
backend/api_endpoints/: schemas.py
backend/benchmarks/: __init__.py  compare.py  report.py  runner.py
backend/chroma_anote_db/: chroma.sqlite3
backend/constants/: global_constants.py
backend/database/: agent_runs.py  api_keys.py  db.py  db_auth.py  db_pool.py  feedback_signals.py  init_db_dev.py  init_db_dev_natan.py  models.py  qa_feedback.py  schema.sql  session.py  usage.py
backend/integrations/: __init__.py  base.py  mocks.py  registry.py
backend/mcp/: mcp_server.py
backend/rag_service/: rag_agent.py
backend/routes/: auth_routes.py  chat_routes.py  file_routes.py  health_routes.py
backend/services/: audio_service.py  finance_gpt.py  llm_provider.py  social_content_planner.py  tabular_service.py  video_service.py  vision_service.py  (+1 more)
(+174 files in other folders)
